recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:2: error: not found: value level
	if(level==0){
           ^PolygonFractal:10: error: not found: value sierpinski
			sierpinski(levels-1,length/2);
                        ^